Changelog
=========

1.1 (unreleased)
----------------

- Set logs to DEBUG.
  [thomasdesvenain]

- i18n fixes.
  [thomasdesvenain]


1.0 (2013-02-14)
----------------

- Initial release